# data-ai-lab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dataform.json  pytest.ini  this.json  this.py  workflow_settings.yaml
.devcontainer/: .bashrc  .env  Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
.github/: pull_request_template.md
.github/utils/: python_pr.sh
.github/workflows/: data-ai-lab-deploy.yml  data-ai-lab-pr.yml  docker-pr.yml  python-pr.yml  sql-definitions-pr.yml  terraform-apply.yml  terraform-pr.yml
cloud-dock/: python_pr.sh
cloud-dock/playground_batch_ingest/: .gitignore  Dockerfile  README.md  generate_test_csvs.py  pyproject.toml
cloud-dock/playground_batch_ingest/src/: __init__.py  app.py  main.py
cloud-dock/playground_batch_ingest/src/config_loader/: __init__.py  loader.py
cloud-dock/playground_batch_ingest/src/routes/: batch_routes.py
cloud-dock/playground_batch_ingest/src/schemas/: __init__.py  product_schema.py  shop_schema.py  transaction_schema.py
cloud-dock/playground_batch_ingest/src/services/: batch_processor.py  csv_processor.py  dlq.py  gcs_handler.py  publisher.py
cloud-dock/playground_batch_ingest/test_csvs/: products.csv  shops.csv  transactions.csv
cloud-dock/playground_batch_ingest/tests/: conftest.py  int_test.sh  test_app.py  test_batch_processor.py  test_batch_routes.py  test_config_loader.py  test_csv_processor.py  test_csv_processor_enhanced.py  test_dlq.py  test_gcs_handler.py  test_publisher.py  test_schemas.py
cloud-dock/playground_stream_ingest/: .dockerignore  Dockerfile  README.md  pyproject.toml
cloud-dock/playground_stream_ingest/scripts/: local-test.sh
cloud-dock/playground_stream_ingest/src/: app.py  main.py
cloud-dock/playground_stream_ingest/src/config_loader/: loader.py
cloud-dock/playground_stream_ingest/src/routes/: transaction_routes.py
cloud-dock/playground_stream_ingest/src/schemas/: transaction_schema.py
cloud-dock/playground_stream_ingest/src/services/: dlq.py  publisher.py  validator.py
cloud-dock/playground_stream_ingest/tests/: conftest.py  int_test.sh  test_app.py  test_config_loader.py  test_dlq.py  test_publisher.py  test_routes.py  test_validator.py
cloud-dock/playground_stream_ingest/tests/payload_example/: transaction_example.json
data_generation/: generate_test_csvs.py
dataform/: dataform.json
definitions/: .sqlfluff  first_view.sqlx  second_view.sqlx
ecommerce-simulator/: README.md  app.py  data_generators.py  requirements.txt  run.sh
ecommerce-simulator/templates/: dashboard.html
infra/: backend.tf  main.tf  terraform.tfvars  variables.tf  versions.tf
infra-init/: main.tf  output.tf  variables.tf
infra/modules/artefact_registry/: artefacty_registry.tf  variables.tf
infra/modules/bigquery_dataset/: dataset.tf  outputs.tf  service_account.tf  variables.tf
infra/modules/dataform/: dataform.tf  variables.tf
infra/modules/dataset_warehousing/: outputs.tf  service_account.tf  variables.tf  warehouse_zones.tf
infra/modules/gcs_trigger_event_arc/: event_arc.tf  gcs_iam.tf  variables.tf
infra/modules/playground_project/: bigquery_pubsub.tf  cloudrun.tf  event_arc.tf  gcs.tf  secrets.tf  variables.tf
infra/modules/project_services/: outputs.tf  services.tf  variables.tf
infra/modules/pubsub_bigquery/: pubsub.tf  raw_table.tf  variables.tf
infra/modules/secrets/: outputs.tf  secrets.tf  variables.tf
